// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test App with React Fragment renders app 1`] = `
Array [
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <p>
        Edit 
        <code>
          src/App.js
        </code>
         and save to reload.
      </p>
      <a
        className="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
------------HTML PREVIEW---------------
<div class="App">
    <header class="App-header">
        <p>
            Edit 
            <code>
                src/App.js
            </code>
             and save to reload.
        </p>
        <a
            class="App-link"
            href="https://reactjs.org"
            rel="noopener noreferrer"
            target="_blank"
        >
            Learn React
        </a>
    </header>
</div>,
  <button
    className="button"
  >
    Test button
  </button>
------------HTML PREVIEW---------------
<button class="button">
    Test button
</button>,
]
`;

exports[`Test App without React Fragment renders app 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <p>
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
  <button
    className="button"
  >
    Test button
  </button>
</div>
------------HTML PREVIEW---------------
<div class="App">
  <header class="App-header">
    <p>
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <a
      class="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
  <button class="button">
    Test button
  </button>
</div>
`;
